feat: add admin co2 analytics api
